--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel serve src/index.html",
-    "build": "parcel build src/index.html -d build",
+    "build": "parcel build src/index.html -d build --public-url /fs-disc/",
     "help": "echo Ayuda"
   },
   "keywords": [],
