--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "disc",
+  "name": "fs-disc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "parcel serve src/index.html",
     "build": "parcel build src/index.html -d build --public-url /fs-disc/",
+    "deploy": "gh-pages -d build",
+    "clean": "rm -rf dist build .cahe",
     "help": "echo Ayuda"
   },
   "keywords": [],
