--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "JuanDaniel2510",
   "license": "ISC",
   "devDependencies": {
+    "less": "^3.12.2",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
