--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "author": "JuanDaniel2510",
   "license": "ISC",
   "devDependencies": {
-    "less": "^3.12.2",
-    "live-server": "^1.2.1",
+    "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "postcss-clean": "^1.1.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-font-magician": "^2.3.1",
+    "postcss-mixins": "^7.0.1",
+    "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0"
   }
