--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "postcss-clean": "^1.1.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-font-magician": "^2.3.1",
-    "postcss-mixins": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0"
+  },
+  "dependencies": {
+    "postcss-mixins": "^6.2.3"
   }
 }
